data/other_junk.txt
-----BEGIN SAMPLE TEXT-----
/* background-color: #f0f0f0; */
var x = document.getElementById("demo");
>>> import numpy as np;
<div class="container">Welcome!</div>
\\server\fileshare\location\images
-----END CERTIFICATE-----
SELECT * FROM USERS WHERE ID=1;
<h1>Page Title</h1>
?php echo 'Hello World!'; ?>
Repository Staff Only: internal access
/* Invalid comment block */ 
???Unknown encoding????
-- Fetching data from server...
<<html><head><title>404 Error</title></head></html>>
7cG9zdGVyZQ==
-----BEGIN JSON BLOCK-----
error: invalid token in input
b2ZmICMxMjM=
<body onload="start()">
chmod 777 /var/www/html
-----START OF SIGNATURE-----
404 page not found
#!/bin/bash echo "Running script"
if [ -f /var/log/syslog ]; then 
-----END OF MESSAGE-----
function myFunction() { return "Hello"; }
|data missing in this section|
-----BEGIN PUBLIC KEY-----
#pragma once
$(document).ready(function() {
***** end of line reached *****
<div id="wrapper">Content goes here</div>
var jsonObject = {"key": "value"};
public static void main(String[] args) {
cd /home/user/scripts && ./run.sh
{ "error_code": 404, "message": "Not Found" }
-----INVALID BLOCK-----
Unexpected token in JSON
-----BEGIN GARBLED DATA-----
\\Invalid path
Loading, please wait...
-----END SIGNATURE-----
select * from table where column = ?
<error>Missing closing tag</error>
>>> Invalid syntax error
***** Section Placeholder *****
-----BEGIN LICENSE-----
function findMax(arr) { return Math.max(...arr); }
?xml version="1.0" encoding="UTF-8"?>
--No data available for this query--
<img src="broken-link.jpg" alt="Image not found">
-----END PRIVATE KEY-----
#include <iostream>
-----BEGIN SIGNED MESSAGE-----
var jsonData = parseData("{invalid: json}");
Error: Unexpected end of input
data:image/png;base64,INVALID_STRING
<?php if ($value) { echo "True"; } ?>
/* TODO: Refactor this section */
<a href="404.html">Broken Link</a>
-----INVALID SIGNATURE-----
<?php $file = fopen("test.txt", "r"); ?>
-----BEGIN HTML CONTENT-----
/* Missing semicolon */
<html>Invalid HTML structure</html>
-----END BLOCK-----
NullPointerException at line 45
for(i=0; i<length; i++) {console.log(i);}
SELECT COUNT(*) FROM INVALID_TABLE;
<head><style>body{font-family: Arial;}</style></head>
-----BEGIN MARKDOWN-----
500 Internal Server Error
sudo apt-get update && sudo apt-get upgrade
echo "Hello World!" > /dev/null
-----BEGIN INVALID DATA-----
var error = new Error("Something went wrong");
/* WARNING: Do not modify this file */
-----END CERTIFICATE-----
>>>SyntaxError: Unexpected EOF
<form action="submit.php" method="POST">
-----INCOMPLETE BLOCK-----
C:\Windows\System32\drivers\etc\hosts
InvalidOperationException in module XYZ
-----BEGIN XML-----
SELECT * FROM table WHERE name LIKE 'test';
<p>Error: File not found</p>
import pandas as pd
>>>FileNotFoundError: 'data.csv' not found
-----END LOG ENTRY-----
<div class="content">Error 500</div>
-----BEGIN CODE SNIPPET-----
#include <stdio.h>
-----END OF DATA-----
<?xml version="1.0"?>
-----INVALID END BLOCK-----
Unable to establish connection
^&$g4rbledT#xt@!?
][][]zzzzzzz____ERROR!
÷§9*!|+=}|]||/?><~`
℗Ø¶¨C~|--€##%ÿ^®
**|~~~%%%*&^@~1O0p
@#$%@!?!><~~`~1234abc
]][[;;pP0l1m34;,,??
garbledData-->`]["
<<<<ERROR: UNKNOWN_DAT@@>@&
ßƒ@¿¡ERROR___LOOP;;END
==INVALID_SYNTAX##?><><!
@#$%#$%%$&)(*&^^LOST??
